--- a/templates/index.html
+++ b/templates/index.html
@@ -8,5 +8,52 @@
 </head>
 <body>
     <h1>Página principal del sistema</h1>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">Inicio</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">Analizar <span class="sr-only">(current)</span></a>
+                </li>
+              </ul>
+              <ul class="navbar-nav mr-auto right">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">Acerca <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">Contacto <span class="sr-only">(current)</span></a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+    </header>
+
+<!--Aquí es donde empieza la divisón de la página principal-->
+    <div class="contenido">
+      <div class="acomodar">
+        <div class="izquierda">
+          <h2>Analiza la
+          agresividad de
+          tu conversación
+          </h2>
+          <br><br>
+          <p>Identifica los mensajes
+          agresivos,crea reportes
+          y guarda evidencia</p>
+          <br><br>
+          <button class="boton">iniciar</button>
+        </div>
+
+        <div class="derecha">
+          <img src="">
+        </div>
+
+      </div>
+    </div>
+
 </body>
 </html>
