--- a/templates/cargar-ac.html
+++ b/templates/cargar-ac.html
@@ -42,9 +42,9 @@
             2. Click en cargar archivo<br>
             3. Click en continuar</h5>
             <br>
-         <p>Las conversaciones analizadas no 
-            son almacenadas en nuestros servidores, 
-            simplemente se analizan y una vez calculados 
+         <p>Las conversaciones analizadas no
+            son almacenadas en nuestros servidores,
+            simplemente se analizan y una vez calculados
             los resultados, estas son eliminadas.
         </p>
     </div>
@@ -53,7 +53,7 @@
     <div class="archivo">
         <h2>Cargar archivo de conversación:</h2>
         <h3> NOTA:</h3><p>Solo se admiten archivos con formato JSON</p>
-        
+
         <form action="/uploader" method="POST" enctype="multipart/form-data">
             <input type="file" name="archivo">
             <br><br>
@@ -61,8 +61,8 @@
             <input type="hidden"value="ac" id="tipo" name="tipo">
             <div class="msg">{{ msg }}</div>
          </form>
-             <div class="continuar"> 
-                <a href="simulacion-chat"><p>Continuar</p></a>
+             <div class="continuar">
+                <a href="resultado-ac"><p>Continuar</p></a>
             </div>
     </div>
     <!--Termina container es la caja que contiene el cargar achivo de conversacion -->
