--- a/templates/cargar-rs.html
+++ b/templates/cargar-rs.html
@@ -42,9 +42,9 @@
             2. Click en cargar archivo<br>
             3. Click en continuar</h5>
             <br>
-         <p>Las conversaciones analizadas no 
-            son almacenadas en nuestros servidores, 
-            simplemente se analizan y una vez calculados 
+         <p>Las conversaciones analizadas no
+            son almacenadas en nuestros servidores,
+            simplemente se analizan y una vez calculados
             los resultados, estas son eliminadas.
         </p>
     </div>
@@ -53,15 +53,15 @@
     <div class="archivo">
         <h2>Cargar archivo de conversación:</h2>
         <h3> NOTA:</h3><p>Solo se admiten archivos con formato JSON</p>
-        
-        <form action="/uploader" method="POST" enctype="multipart/form-data">
+
+        <form action="uploader" method="POST" enctype="multipart/form-data">
             <input type="file" name="archivo">
             <br><br>
             <input type="submit"value="Cargar archivo">
             <input type="hidden"value="rs" id="tipo" name="tipo">
             <div class="msg">{{ msg }}</div>
          </form>
-             <div class="boton"> 
+             <div class="boton">
                 <a href="simulacion-chat">Continuar</a>
             </div>
     </div>
